test/link/script-different-type.out
error: "ROM1" is specified to be a SRAM section, but it is already a ROMX section
    at script-different-type.link(2)
Linking failed with 1 error
