test/link/script-different-type.link
sram 1
	"ROM1"
